lib_LTLIBRARIES = libsparsekit.la

libsparsekit_la_SOURCES = amask.f \
  amubdg.f \
  amub.f \
  amub_single.f \
  amudia.f \
  amuxd.f \
  amuxe.f \
  amux.f \
  amuxj.f \
  aplb1.f \
  aplbdg.f \
  aplb.f \
  apldia.f \
  aplsb1.f \
  aplsb.f \
  aplsbt.f \
  aplsca.f \
  apmbt.f \
  assmb1.f \
  assmbo.f \
  atmux.f \
  blkchk.f \
  blkfnd.f \
  bndcsr.f \
  bound.f \
  bsort2.f \
  bsrcsr.f \
  checkref.f \
  chkelmt.f \
  cnrms.f \
  coicsr.f \
  coocsr.f \
  cooell.f \
  copmat.f \
  cperm.f \
  cscal.f \
  csort.f \
  csrbnd.f \
  csrbsr.f \
  csrcoo.f \
  csrcsc.f \
  csrdia.f \
  csrdns.f \
  csrell.f \
  csrjad.f \
  csrlnk.f \
  csrmsr.f \
  csrncf.f \
  csrssk.f \
  csrssr.f \
  daxpy.f \
  dcn.f \
  dcsort.f \
  ddot.f \
  diacsr.f \
  diamua.f \
  diapos.f \
  dinfo1.f \
  diric.f \
  dlauny.f \
  dnscsr.f \
  dnscsr_single.f \
  dperm.f \
  dscaldg.f \
  dump.f \
  dvperm.f \
  ecn.f \
  ellcsr.f \
  estif3.f \
  exphes.f \
  exppro.f \
  extbdg.f \
  filter.f \
  genfea.f \
  genfeu.f \
  getbwd.f \
  getdia.f \
  getelm.f \
  getl.f \
  getu.f \
  gradi3.f \
  hes.f \
  hsourc.f \
  ilu0.f \
  ilut.f \
  infdia.f \
  ivperm.f \
  jadcsr.f \
  ldsolc.f \
  ldsol.f \
  ldsoll.f \
  levels.f \
  lnkcsr.f \
  lsolc.f \
  lsol.f \
  lusol0.f \
  markgen.f \
  matrf2.f \
  mgsr.f \
  milu0.f \
  msrcsr.f \
  ope.f \
  pgmres.f \
  pltmt.f \
  pltmtps.f \
  project.f \
  prtmt.f \
  readmt.f \
  refall.f \
  retmx.f \
  rnrms.f \
  rperm.f \
  rscal.f \
  sparsekit.h \
  sskssr.f \
  ssrcsr.f \
  submat.f \
  timestamp.f \
  transp.f \
  udsolc.f \
  udsol.f \
  unassbl.f \
  usolc.f \
  usol.f
